tests/paczka1/small_fuzzy/49604337.err
Error in line 3: vLpCjkxsWE A945 99,4
Error in line 5: iavjICnEEU A945 83,2
